
[B][COLOR green]V 1.0.0 (Tuesday 06 October, 2015)[/COLOR][/B]

-- [COLOR yellow][B]Release[/COLOR][/B]
	- Do not forget to insert Indian IP address unless you're from India OR using Indian VPN

[B][COLOR green]V 1.0.1 (Tuesday 06 October, 2015)[/COLOR][/B]

-- [COLOR yellow][B]New functionality[/COLOR][/B]
	- Added Highest[1080p if available] and 'Let me choose'(720p and lower) streaming option under settings.

[B][COLOR green]V 1.0.2 (Saturday 10 October, 2015)[/COLOR][/B]
-- [COLOR yellow][B]Video[/COLOR][/B] Removed empty directory when stream is loaded, and rather keep existing directory.  Resuming should work now for movies, tvshows, and sports.  Please note, this update will pop up Inputstream errors due to the way addon is designed.  Don't be alarmed.